Corrected an issue with alignment in stye.css.

--- a/style.css
+++ b/style.css
@@ -25,15 +25,19 @@ body {
 
 .headerTop {
   padding: 10px;
-  gap: 5em;
+  gap: 20em;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
 .links {
   display: flex;
-  font-size: 18px;
+  font-size: 15px;
+  color: #e5e7eb;
+}
+
+.hl {
   color: #e5e7eb;
 }
 
